--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,14 +1,46 @@
-<h1> Cocktails</h1>
+<html>
+  <head>
+    <title>RailsMisterCocktail</title>
+    <meta name="csrf-param" content="authenticity_token" />
+<meta name="csrf-token" content="c34nxm2KLxap7Nhlv+0Q3j3FMthwOPdejSaLZKMIueb3RaoAqLJimL5s01DUie5sHTUZG54oCIPRO+Pb3KPz/w==" />
+
+
+    <link rel="stylesheet" media="all" href="/assets/application-02ffdb219167e35573e377e897880087fc2045ce5cdcb0c1b8155bcb15681e60.css" data-turbolinks-track="reload" />
+    <script src="/packs/js/application-ca08907326a8c2d6a2d6.js" data-turbolinks-track="reload"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  </head>
+
+  <body>
+
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="https://images.unsplash.com/photo-1586734565046-d83481ba20aa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" width="30" height="30" alt="" loading="lazy" class="rounded">
+  </a>
+</nav>
+
 
 <ul class="list-inline d-flex">
   <% @cocktails.each do |cocktail| %>
   <div class="card bg-dark text-white">
-  <img src="https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"class="card-img">
+  <li class="card-text">
+  <% if cocktail.photo.present? %>
+    <%= cl_image_tag cocktail.photo.key, height: 300, width: 400, crop: :fill %>
+  <% else %>
+    <%= cl_image_tag 'photo-1563223771-5fe4038fbfc9_jjfxdu', height: 300, width: 400, crop: :fill %>
+  <% end %>
   <div class="card-img-overlay">
-    <li class="card-text"><%= link_to cocktail.name, cocktail_path(cocktail)%> </li>
+    <%= link_to cocktail.name, cocktail_path(cocktail)%> </li>
      </div>
      </div>
   <% end %>
 </ul>
 
 <%= link_to "Add a new cocktail", new_cocktail_path, class: "btn btn-primary" %>
+<div class="footer-copyright">
+    This footer is made with <i class="fas fa-heart"></i> by Lise & Caroline
+  </div>
+</div>
+
+  </body>
+</html>
