--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for [ @cocktail ] do |f| %>
   <%= f.input :name %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit "Submit cocktail", class: "btn btn-primary" %>
 <% end %>
 
